finish data types

--- a/numpy/dataTypes.ipynb
+++ b/numpy/dataTypes.ipynb
@@ -2,16 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.26.4'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np "
+    "import numpy as np \n",
+    "# check numpy version \n",
+    "np.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Basic Data Types \n",
+    "result = 0\n",
+    "for i in range(100):\n",
+    "    result += 1\n",
+    "result \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 4 \n",
+    "x = \"4\"\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -20,20 +79,20 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# integer list \n",
+    "# Python Lists \n",
     "L = list(range(10))\n",
     "L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -42,19 +101,18 @@
        "int"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# check L element type\n",
     "type(L[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,20 +121,19 @@
        "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# string list \n",
     "L2 = [str(c) for c in L]\n",
-    "L2 "
+    "L2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -85,19 +142,18 @@
        "str"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# check L2 element type \n",
     "type(L2[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,20 +162,19 @@
        "[bool, str, float, int]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# mix type list \n",
     "L3 = [True, \"2\", 3.0, 4]\n",
     "[type(item) for item in L3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -128,14 +183,14 @@
        "array('i', [0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# fix type arrays in python \n",
-    "import array\n",
+    "# Python Array\n",
+    "import array \n",
     "L = list(range(10))\n",
     "A = array.array('i', L)\n",
     "A"
@@ -143,49 +198,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Numpy Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 4, 5, 3])"
+       "array([1, 4, 2, 5, 3])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# integer array\n",
-    "np.array([1, 2, 4, 5, 3])"
+    "# integer array \n",
+    "np.array([1, 4, 2, 5, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3.1, 4. , 2. , 3. ])"
+       "array([3.14, 4.  , 2.  , 3.  ])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# float array\n",
-    "np.array([3.1, 4, 2, 3])"
+    "# float upcast\n",
+    "np.array([3.14, 4, 2, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,19 +258,19 @@
        "array([1., 2., 3., 4.], dtype=float32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# float 32 array\n",
+    "# nested lists result in multi-dimensional arrays\n",
     "np.array([1, 2, 3, 4], dtype='float32')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -217,19 +281,19 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# multi-dimensional array\n",
+    "# nested lists result in multi-dimensional arrays\n",
     "np.array([range(i, i + 3) for i in [2, 4, 6]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -238,19 +302,19 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create a length 10 integer array filled with zeros\n",
-    "np.zeros(10, dtype=int)"
+    "# Create a length-10 integer array filled with zeros\n",
+    "np.zeros(10, dtype='int')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -261,19 +325,19 @@
        "       [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a 3x5 floating-point array filled with ones\n",
-    "np.ones((3, 5), dtype=float)"
+    "np.ones((3, 5), dtype='float')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +348,7 @@
        "       [3.14, 3.14, 3.14, 3.14, 3.14]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +369,7 @@
        "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,12 +378,12 @@
     "# Create an array filled with a linear sequence\n",
     "# Starting at 0, ending at 20, stepping by 2\n",
     "# (this is similar to the built-in range() function)\n",
-    "np.arange(0, 20, 2)"
+    "np.arange(0, 20, 2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +392,7 @@
        "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,18 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.52514969, 0.58577604, 0.00653301],\n",
-       "       [0.02406496, 0.1867111 , 0.78418021],\n",
-       "       [0.33929831, 0.56146365, 0.47303741]])"
+       "array([[0.54495851, 0.92565068, 0.61719964],\n",
+       "       [0.61842699, 0.42750075, 0.17625122],\n",
+       "       [0.13209538, 0.28372506, 0.05326552]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,18 +428,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.31827919,  0.376053  , -0.93882112],\n",
-       "       [-0.20871421, -0.03261433,  0.75807892],\n",
-       "       [-0.98376776,  0.76821022, -0.17615392]])"
+       "array([[-0.667514  , -0.33365317, -0.50170004],\n",
+       "       [-2.44006133, -0.47251581, -1.22068467],\n",
+       "       [ 0.22266871,  0.72487276,  1.8022542 ]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,18 +452,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2, 7, 4],\n",
-       "       [5, 2, 4],\n",
-       "       [7, 4, 9]])"
+       "array([[7, 5, 7],\n",
+       "       [0, 2, 7],\n",
+       "       [3, 7, 7]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +486,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +507,7 @@
        "array([1., 1., 1.])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -465,14 +529,126 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int16)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# numpy standard data types example using strings \n",
+    "# string data types\n",
     "np.zeros(10, dtype='int16')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int16)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# numpy standard data types \n",
+    "np.zeros(10, dtype=np.int16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boolean\n",
+      "[False False False False False False False False False False]\n",
+      "Default integer type - C Long = int64\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "C int = int32\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Integer for indexing\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Byte-int8\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Integer-int16\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Integer-int32\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Integer-int64\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Unsigned Integer-uint8\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Unsigned Integer-uint16\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Unsigned Integer-uint32\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "Unsigned Integer-uint64\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "shorthand for float64\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "Half precision float-float16\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "Single precision float-float32\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "Double precision float-float64\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "shorthand for complex128\n",
+      "[0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      "Complex Number-complex64 = 2 32-bit floats\n",
+      "[0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      "Complex Number-complex128 = 2 64-bit floats\n",
+      "[0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Boolean\")\n",
+    "print(np.zeros(10, dtype=np.bool_))\n",
+    "print(f\"Default integer type - C Long = int64\")\n",
+    "print(np.zeros(10, dtype=np.int_))\n",
+    "print(f\"C int = int32\")\n",
+    "print(np.zeros(10, dtype=np.intc))\n",
+    "print(f\"Integer for indexing\")\n",
+    "print(np.zeros(10, dtype=np.intp))\n",
+    "print(\"Byte-int8\")\n",
+    "print(np.zeros(10, dtype=np.int8))\n",
+    "print(\"Integer-int16\")\n",
+    "print(np.zeros(10, dtype=np.int16))\n",
+    "print(\"Integer-int32\")\n",
+    "print(np.zeros(10, dtype=np.int32))\n",
+    "print(\"Integer-int64\")\n",
+    "print(np.zeros(10, dtype=np.int64))\n",
+    "print(\"Unsigned Integer-uint8\")\n",
+    "print(np.zeros(10, dtype=np.uint8))\n",
+    "print(\"Unsigned Integer-uint16\")\n",
+    "print(np.zeros(10, dtype=np.uint16))\n",
+    "print(\"Unsigned Integer-uint32\")\n",
+    "print(np.zeros(10, dtype=np.uint32))\n",
+    "print(\"Unsigned Integer-uint64\")\n",
+    "print(np.zeros(10, dtype=np.uint64))\n",
+    "print(\"shorthand for float64\")\n",
+    "print(np.zeros(10, dtype=np.float_))\n",
+    "print(\"Half precision float-float16\")\n",
+    "print(np.zeros(10, dtype=np.float16))\n",
+    "print(\"Single precision float-float32\")\n",
+    "print(np.zeros(10, dtype=np.float32))\n",
+    "print(\"Double precision float-float64\")\n",
+    "print(np.zeros(10, dtype=np.float64))\n",
+    "print(\"shorthand for complex128\")\n",
+    "print(np.zeros(10, dtype=np.complex_))\n",
+    "print(\"Complex Number-complex64 = 2 32-bit floats\")\n",
+    "print(np.zeros(10, dtype=np.complex64))\n",
+    "print(\"Complex Number-complex128 = 2 64-bit floats\")\n",
+    "print(np.zeros(10, dtype=np.complex128))\n"
    ]
   },
   {
@@ -480,10 +656,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# numpy standard data types example using numpy object \n",
-    "np.zeros(10, dtype=np.int16)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -502,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
