add setup for pandas

--- a/numpy/1-data-types.ipynb
+++ b/numpy/1-data-types.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
     "result = 0\n",
     "for i in range(100):\n",
     "    result += 1\n",
-    "result \n"
+    "result"
    ]
   },
   {
